// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlighter Component Highlighter renders 1`] = `
<div>
  <div />
</div>
`;

exports[`Highlighter Component Highlighter renders with highlight 1`] = `
<div>
  <div
    class="row"
  >
    <div
      class="col"
    >
      {}
    </div>
    <div
      class="col"
    >
      {"extra":{},"highlighted":true,"inputValue":"OLDDATA","data":"OLDDATA","readOnly":true}
    </div>
  </div>
</div>
`;

exports[`Highlighter Component Highlighter renders with highlight and inValidElement 1`] = `
<div>
  
</div>
`;
